collect refs from all system installations

previously we'd miss extra installation directories

BUG: 501928