flatpakreference.cpp
@@ -164,9 +164,20 @@ bool FlatpakReference::isDefaults() const
 
 static GPtrArray *getSystemInstalledFlatpakAppRefs()
 {
-    g_autoptr(FlatpakInstallation) installation = flatpak_installation_new_system(nullptr, nullptr);
-    GPtrArray *refs = flatpak_installation_list_installed_refs_by_kind(installation, FLATPAK_REF_KIND_APP, nullptr, nullptr);
-    return refs;
+    auto ret = g_ptr_array_new();
+
+    g_autoptr(GPtrArray) installations = flatpak_get_system_installations(nullptr, nullptr);
+    g_ptr_array_foreach(
+        installations,
+        [](gpointer data, gpointer user_data) {
+            auto installation = FLATPAK_INSTALLATION(data);
+            auto ret = static_cast<GPtrArray *>(user_data);
+            g_autoptr(GPtrArray) refs = flatpak_installation_list_installed_refs_by_kind(installation, FLATPAK_REF_KIND_APP, nullptr, nullptr);
+            g_ptr_array_extend_and_steal(ret, refs);
+        },
+        ret);
+
+    return ret;
 }
 
 static GPtrArray *getUserInstalledFlatpakAppRefs()
